force-app/main/default/objects/zaapit__ZaapIT_General_Settings__c/zaapit__ZaapIT_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>ZaapIT General Settings - multi-purpose settings</description>
    <label>ZaapIT General Settings</label>
</CustomObject>