force-app/main/default/objects/zaapit__ZaapIT_General_Settings__c/fields/zaapit__field1__c.field-meta.xml
<CustomField>
    <fullName>zaapit__field1__c</fullName>
    <label>field1</label>
    <type>TextArea</type>
</CustomField>