force-app/main/default/objects/zaapit__ZaapIT_General_Settings__c/fields/zaapit__field2__c.field-meta.xml
<CustomField>
    <fullName>zaapit__field2__c</fullName>
    <label>field2</label>
    <type>TextArea</type>
</CustomField>