force-app/main/default/objects/zaapit__ZaapIT_General_Settings__c/fields/zaapit__field3__c.field-meta.xml
<CustomField>
    <fullName>zaapit__field3__c</fullName>
    <label>field3</label>
    <type>TextArea</type>
</CustomField>