force-app/main/default/objects/zaapit__ZaapIT_General_Settings__c/listViews/zaapit__all_with_feild123.listView-meta.xml
<ListView>
    <fullName>zaapit__all_with_feild123</fullName>
    <columns>NAME</columns>
    <columns>zaapit__field1__c</columns>
    <columns>zaapit__field2__c</columns>
    <columns>zaapit__field3__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>